# method-architect

./: .gitignore  PROJECT_CHARTER.md  README.md  SECURITY.md
helpers/method_extractor/: README.md  pyproject.toml
helpers/method_extractor/method_extractor/: __init__.py  cli.py  dashboard.py  llm.py  method_summary.py  render.py  run_index.py  schema.py  sources.py
helpers/method_extractor/tests/: test_cli.py  test_dashboard.py  test_llm.py  test_method_summary.py  test_run_index.py  test_schema.py  test_sources.py
